--- a/index.html
+++ b/index.html
@@ -7,15 +7,14 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
-	<body class=>
+	<body>
+        <!--wrapper-->
+		<div id="wrapper"class="fade-in">
 
-		<!-- Wrapper -->
-			<div id="wrapper" class="fade-in">
-
-				<!-- Intro -->
-					<div id="intro">
-						<h2>KEVINTARAGON THE ANALYST</h2>
-						<p>Proficient in SQL,R,Python,SPSS,STATA and Excel</p>
+			<!--intro-->
+			<div id="intro">
+      				    <h2>KEVINTARAGON THE ANALYST PORTFOLIO</h2>
+						<p>Proficient in SQL,R,Python script<br/> and also statistical softwares like SPSS,STATA,GRETL & EXCEL</p>
 						<p> Making use of raw data for research and business insight</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
@@ -33,10 +32,10 @@
 							<li class="active"><a href="index.html">Project list</a></li>
 						</ul>
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="https://twitter.com/TaragonAnalyst?t=gb4cvfyaJMlhlECzT3vvMg&s=09" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://github.com/kevintaragon" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
 
@@ -156,10 +155,10 @@
 							  <section>
 								<h3>Social</h3>
 								<ul class="icons alt">
-									<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+									<li><a href="https://twitter.com/TaragonAnalyst?t=gb4cvfyaJMlhlECzT3vvMg&s=09" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
 									<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://github.com/kevintaragon" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</section>
 						</section>
