--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 			<!--intro-->
 			<div id="intro">
       				    <h2>KEVINTARAGON THE ANALYST PORTFOLIO</h2>
-						<p>Proficient in SQL,R,Python script<br/> and also statistical softwares like SPSS,STATA,GRETL & EXCEL</p>
-						<p> Making use of raw data for research and business insight</p>
+						<p>Proficient in R,Python,SQL,SPSS,STATA,GRETL & EXCEL</p>
+						<p> Let making use of raw data for research and business insight</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -23,13 +23,13 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">View Catalogue</a>
+						<a href="index.html" class="logo">proceed below</a>
 					</header>
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">Project list</a></li>
+							<li class="active"><a href="index.html">Social Media</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://twitter.com/TaragonAnalyst?t=gb4cvfyaJMlhlECzT3vvMg&s=09" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
@@ -46,13 +46,13 @@
 							<article class="post featured">
 								<header class="major">
 									<span class="date">July 25, 2022</span>
-									<h2><a href="#">MORE PROJECT TO COME SOON</a></h2>
+									<h2><a href="###">MORE PROJECT TO COME SOON</a></h2>
 									<p>The project that is coming soon it major on data science. <br>It will be about how to manuvour in data world of today<br>
 									and making use of raw data for research and business insight</p>
 								</header>
 								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="#" class="button icon solid solo fa-arrow-down scrolly" class="logo">View Project down below</a></li>
+									<li><a href="##" class="button icon solid solo fa-arrow-down scrolly" class="logo">View Project down below</a></li>
 								</ul>
 							</article>
 
@@ -60,19 +60,19 @@
 							<section class="posts">
 								<article>
 									<header>
-										<span class="date">April 18, 2017</span>
-										<h2><a href="#">Ante mattis<br />
-										interdum dolor</a></h2>
+										<span class="date">July 27, 2022</span>
+										<h2><a href="#">Descriptive analysis<br />
+										in python</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>The analysis below it compost all descriptive statistics done in python(Jupyter Notebook) you can check the code for  your own practice</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<span class="date">April 24, 2022</span>
+										<span class="date">July 28, 2022</span>
 										<h2><a href="#">TWITTER SENTIMENT ANALYSIS</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
@@ -122,35 +122,11 @@
 						<section class="split contact">
 							<section class="alt">
 								<h3>Address</h3>
-								<p>027 Nakuru Rvist<br />
-								Ngata</p>
+								<p>Nakuru, Kenya</p>
 							</section>
 							<section>
 								<h3>Phone</h3>
 								<p><a href="tel:254742152368">(254)742152368</a></p>
-							</section>
-							<section>
-								<h3>Email</h3>
-								<p><a href="mailto:kevintaragon185@gmail.com">kevintaragon185@gmail.com</a></p>
-							</section>
-							<section><form action="action_page.php">
-								<div class="container">
-								  <h4>Subscribe to our Newsletter</h4>
-								  <p>subscribe to get updates</p>
-								</div>
-							  
-								<div class="container" style="background-color:white">
-								  <input type="text" placeholder="Name" name="name" required>
-								  <input type="text" placeholder="Email address" name="mail" required>
-								  <label>
-									<input type="checkbox" checked="checked" name="subscribe"> Daily Newsletter
-								  </label>
-								</div>
-							  
-								<div class="container">
-								  <input type="submit" value="Subscribe">
-								</div>
-							  </form>
 							</section>
 							  <section>
 								<h3>Social</h3>
