--- a/index.html
+++ b/index.html
@@ -128,6 +128,10 @@
 								<h3>Phone</h3>
 								<p><a href="tel:254742152368">(254)742152368</a></p>
 							</section>
+							<section>
+								<h3>Email</h3>
+								<p><a href="mailto:kevintaragon185@gmail.com">kevintaragon185@gmail.com</a></p>
+							</section>
 							  <section>
 								<h3>Social</h3>
 								<ul class="icons alt">
