--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
 						</div>
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
-								<h1>Heya. I'm <strong>KEVIN TARAGON</strong>.</h1>
-							</header>
+								<p>
+								<h2>Hi. I'm </br><strong><marquee bgcolor="cyan">KEVIN TARAGON</marquee></strong></h2>
+						        </p> 
+    							</header>
 							<p> A <strong>statistician,data analyst,data scientist,forex guru and machine learning experty</strong> and welcome to my portfolio to know who am I.</p>
 							<a href="#work" class="button large scrolly">Let learn what I do</a>
 						</div>
@@ -67,7 +69,9 @@
 						</div>
 					</div>
 					<footer>
-						<p>Is customer satisfaction the first priority?</p>
+						<p>
+							<h2><strong><marquee bgcolor="yellow" height="40x">Projects Coming Soon</marquee></strong></h2>
+						</p>
 						<a href="#portfolio" class="button large scrolly">See some of my recent work</a>
 					</footer>
 				</div>
@@ -112,8 +116,8 @@
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
-								<h3><a href="#">Visualization wth seaborn in Python</a></h3>
-								<p>Seaborn build interactive graphs.</p>
+								<h3><a href="#">Visualization with seaborn in Python</a></h3>
+								<p>Building interactive graphs with seaborn package.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
@@ -190,7 +194,7 @@
 					</div>
 					<footer>
 						<ul id="copyright">
-							<li>&copy; Kevin,2022. All rights reserved.</li><li>Design: <a>KevintheAnalyst</a></li>
+							<li>&copy; Kevin,2022. All rights reserved.</li>
 						</ul>
 					</footer>
 				</div>
