--- a/index.html
+++ b/index.html
@@ -147,16 +147,16 @@
 							<form method="post" action="#">
 								<div class="row">
 									<div class="col-6 col-12-small">
-										<input type="text" name="name" id="name" placeholder="Name" />
+										<input type="text" name="txtName" id="txtName" placeholder="Name" />
 									</div>
 									<div class="col-6 col-12-small">
-										<input type="text" name="email" id="email" placeholder="Email" />
+										<input type="text" name="txtEmail" id="txtEmail" placeholder="Email" />
 									</div>
 									<div class="col-12">
-										<input type="text" name="subject" id="subject" placeholder="Subject" />
+										<input type="text" name="txtPhone" id="txtphone" placeholder="Phone" />
 									</div>
 									<div class="col-12">
-										<textarea name="message" id="message" placeholder="Message"></textarea>
+										<textarea name="txtMessage" id="txtMessage" placeholder="Message"></textarea>
 									</div>
 									<div class="col-12">
 										<ul class="actions">
