--- a/index.html
+++ b/index.html
@@ -139,12 +139,15 @@
 			<article id="contact" class="wrapper style8">
 				<div class="container medium">
 					<header>
+						<h4><marquee bgcolor="lightblue">Contact Form under maintenance</marquee></h4>
+					</header>
+					<header>
 						<h2>Have me make stuff for you.</h2>
 						<p></p>
 					</header>
 					<div class="row">
-						<div class="col-12">
-							<form method="post" action="#">
+						<div class="col-13">
+							<form method="post" action="contact.php">
 								<div class="row">
 									<div class="col-6 col-12-small">
 										<input type="text" name="txtName" id="txtName" placeholder="Name" />
@@ -153,7 +156,7 @@
 										<input type="text" name="txtEmail" id="txtEmail" placeholder="Email" />
 									</div>
 									<div class="col-12">
-										<input type="text" name="txtPhone" id="txtphone" placeholder="Phone" />
+										<input type="text" name="txtPhone" id="txtPhone" placeholder="Phone" />
 									</div>
 									<div class="col-12">
 										<textarea name="txtMessage" id="txtMessage" placeholder="Message"></textarea>
